k8s-manifests/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deploy
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: nginx
  template: 
    metadata:
      labels:
        app: nginx
    spec:
      containers: 
      - name: nginx-container
        image: nginx
        ports:
        - containerPort: 80
