k8s-manifests/nginx2.yml
#top four items
apiVersion: v1
kind: Pod
metadata:
  name: nginxpod2 
spec:
  containers:
  - name: nginx
    image: nginx
    ports: 
    - containerPort: 80
