k8s-manifests/api1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api1-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api1
  template:
    metadata:
      labels:
        app: api1
    spec:
      containers:
      - name: api1
        image: ravi2krishna/node-api1 
        ports:
        - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: api1-service
spec:
  selector:
    app: api1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3001
