k8s-manifests/api3-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api3-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api3
  template:
    metadata:
      labels:
        app: api3
    spec:
      containers:
      - name: api3
        image: ravi2krishna/node-api3
        ports:
        - containerPort: 3003
---
apiVersion: v1
kind: Service
metadata:
  name: api3-service
spec:
  selector:
    app: api3
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3003
