k8s-manifests/lms-fe-deploy.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: lms-fe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lms-fe
  template:
    metadata:
      labels:
        app: lms-fe
    spec:
      containers:
        - name: frontend-container
          image: ravi2krishna/lms-fe
          imagePullPolicy: Always
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata: 
  name: lms-fe-service
spec: 
  type: LoadBalancer 
  ports:
  - port: 80
  selector:   
    app: lms-fe
