k8s-manifests/login-dev-ns.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: login-deploy
  namespace: dev
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: login
  template: 
    metadata:
      labels:
        app: login
    spec:
      containers: 
      - name: login-container
        image: mannurajesh/kalki2898ad:dev
        ports:
        - containerPort: 80  
---

apiVersion: v1
kind: Service
metadata:
  name: login-service
  namespace: dev
spec:
  type: NodePort
  selector:
    app: login
  ports:
    - port: 80
      # By default and for convenience, the `targetPort` is set to
      # the same value as the `port` field.
      targetPort: 80
      # Optional field
      # By default and for convenience, the Kubernetes control plane
      # will allocate a port from a range (default: 30000-32767)
      nodePort: 30007
